<resources>
    <string name="app_name">FilmOp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nombre_largo">nombre largo</string>
    <string name="favoritos">Favoritos</string>
    <string name="ver_m_s_tarde">Ver más tarde</string>
    <string name="inicio">Inicio</string>
    <string name="plataformas">Plataformas</string>
    <string name="genero">Genero</string>
    <string name="titulo">Titulo</string>
    <string name="duracion">Duracion</string>
    <string name="pel_culas">Películas</string>
    <string name="pelicula_detalle">Pelicula Detalle</string>
    <string name="valoraci_n">Valoración</string>
    <string name="pel_cula_detalle">Película Detalle</string>
</resources>