<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="net.iessochoa.mireyamartinez.filmop.ui.home.HomeFragment"
        android:label="@string/pel_culas"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_peliculaDetalleFragment"
            app:destination="@id/peliculaDetalleFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favoritos"
        android:name="net.iessochoa.mireyamartinez.filmop.ui.favoritos.FavoritosFragment"
        android:label="@string/favoritos"
        tools:layout="@layout/fragment_favoritos" >
        <action
            android:id="@+id/action_navigation_favoritos_to_valoracionFragment"
            app:destination="@id/valoracionFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_ver_tarde"
        android:name="net.iessochoa.mireyamartinez.filmop.ui.notifications.VerTardeFragment"
        android:label="@string/ver_m_s_tarde"
        tools:layout="@layout/fragment_ver_tarde" />
    <fragment
        android:id="@+id/peliculaDetalleFragment"
        android:name="net.iessochoa.mireyamartinez.filmop.ui.pelicula_detalle.PeliculaDetalleFragment"
        android:label="@string/pel_cula_detalle"
        tools:layout="@layout/fragment_pelicula_detalle" >
        <argument
            android:name="movieData"
            app:argType="net.iessochoa.mireyamartinez.filmop.data.MovieData" />
        <action
            android:id="@+id/action_peliculaDetalleFragment_to_navigation_home2"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_peliculaDetalleFragment_to_valoracionFragment"
            app:destination="@id/valoracionFragment" />
    </fragment>
    <fragment
        android:id="@+id/valoracionFragment"
        android:name="net.iessochoa.mireyamartinez.filmop.ui.valoracion.ValoracionFragment"
        android:label="@string/valoraci_n"
        tools:layout="@layout/fragment_valoracion" >
        <argument
            android:name="movieData"
            app:argType="net.iessochoa.mireyamartinez.filmop.data.MovieData"/>
        <action
            android:id="@+id/action_valoracionFragment_to_peliculaDetalleFragment"
            app:destination="@id/peliculaDetalleFragment" />
    </fragment>

</navigation>