<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_detalle_pelicula"
    tools:context=".ui.pelicula_detalle.PeliculaDetalleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/ColorItem">

        <TextView
            android:id="@+id/tvTituloPelicula"
            android:layout_width="385dp"
            android:layout_height="73dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/titulo" />

        <ImageView
            android:id="@+id/ivPortadaPelicula"
            android:layout_width="317dp"
            android:layout_height="364dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTituloPelicula"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvGeneroPelicula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPlataformas"
            tools:text="@string/genero" />

        <TextView
            android:id="@+id/tvSinopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvPlataformas"
            app:layout_constraintTop_toBottomOf="@+id/ivPortadaPelicula"
            tools:text="@string/plataformas" />

        <TextView
            android:id="@+id/tvPlataformas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSinopsis"
            tools:text="@string/plataformas" />

        <TextView
            android:id="@+id/tvDuracionPelicula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvGeneroPelicula"
            app:layout_constraintTop_toBottomOf="@+id/tvGeneroPelicula"
            tools:text="@string/duracion" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/imbValoracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:src="@android:drawable/btn_star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imbVerTarde" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/imbVerTarde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:src="@drawable/ic_clock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>